tighten up the screws