@@ -11,7 +11,6 @@ import com.salesforce.apollo.choam.Parameters;
 import com.salesforce.apollo.choam.Parameters.Builder;
 import com.salesforce.apollo.choam.Parameters.RuntimeParameters;
 import com.salesforce.apollo.choam.proto.FoundationSeal;
-import com.salesforce.apollo.choam.support.ExponentialBackoffPolicy;
 import com.salesforce.apollo.context.DynamicContextImpl;
 import com.salesforce.apollo.cryptography.Digest;
 import com.salesforce.apollo.cryptography.DigestAlgorithm;
@@ -116,33 +115,28 @@ public class ContainmentDomainTest {
                                                                            .filter(c -> !c.active())
                                                                            .map(Domain::logState)
                                                                            .toList()));
-        var oracle = domains.get(0).getDelphi();
+        var oracle = domains.getFirst().getDelphi();
         oracle.add(new Oracle.Namespace("test")).get();
         DomainTest.smoke(oracle);
     }
 
     private Builder params() {
-        var template = Parameters.newBuilder()
-                                 .setGenerateGenesis(true)
-                                 .setGenesisViewId(GENESIS_VIEW_ID)
-                                 .setBootstrap(Parameters.BootstrapParameters.newBuilder()
-                                                                             .setGossipDuration(Duration.ofMillis(20))
-                                                                             .build())
-                                 .setGenesisViewId(DigestAlgorithm.DEFAULT.getOrigin())
-                                 .setGossipDuration(Duration.ofMillis(20))
-                                 .setProducer(Parameters.ProducerParameters.newBuilder()
-                                                                           .setGossipDuration(Duration.ofMillis(20))
-                                                                           .setBatchInterval(Duration.ofMillis(50))
-                                                                           .setMaxBatchByteSize(1024 * 1024)
-                                                                           .setMaxBatchCount(10_000)
-                                                                           .setEthereal(Config.newBuilder()
-                                                                                              .setNumberOfEpochs(12)
-                                                                                              .setEpochLength(33))
-                                                                           .build())
-                                 .setCheckpointBlockDelta(200)
-                                 .setDrainPolicy(ExponentialBackoffPolicy.newBuilder()
-                                                                         .setInitialBackoff(Duration.ofMillis(1))
-                                                                         .setMaxBackoff(Duration.ofMillis(1)));
-        return template;
+        return Parameters.newBuilder()
+                         .setGenerateGenesis(true)
+                         .setGenesisViewId(GENESIS_VIEW_ID)
+                         .setBootstrap(
+                         Parameters.BootstrapParameters.newBuilder().setGossipDuration(Duration.ofMillis(20)).build())
+                         .setGenesisViewId(DigestAlgorithm.DEFAULT.getOrigin())
+                         .setGossipDuration(Duration.ofMillis(20))
+                         .setProducer(Parameters.ProducerParameters.newBuilder()
+                                                                   .setGossipDuration(Duration.ofMillis(20))
+                                                                   .setBatchInterval(Duration.ofMillis(50))
+                                                                   .setMaxBatchByteSize(1024 * 1024)
+                                                                   .setMaxBatchCount(10_000)
+                                                                   .setEthereal(Config.newBuilder()
+                                                                                      .setNumberOfEpochs(12)
+                                                                                      .setEpochLength(33))
+                                                                   .build())
+                         .setCheckpointBlockDelta(200);
     }
 }
